app cleanup & layout bug fix

--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -9,3 +9,7 @@
     padding: 0;
     font: 14px  'Montserrat',san-serif;
 }
+
+body {
+    overflow: hidden;
+}
